sdk-java: update sample app files